fix bulma scrollbar issue

--- a/src/popup/custom.sass
+++ b/src/popup/custom.sass
@@ -1,5 +1,8 @@
 @import ../../node_modules/bulma/bulma.sass
 
+html
+  overflow-y: hidden
+
 a
   outline: 0 !important
 
